--- a/cernera_me/src/components/pages/users/UserLandingPage.module.scss
+++ b/cernera_me/src/components/pages/users/UserLandingPage.module.scss
@@ -5,9 +5,6 @@
 }
 
 .tech-images {
-  padding-left: 25px;
-  padding-right: 25px;
-
   @media only screen and (max-width: 500px) {
     margin-top: 50px;
   }
